--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -35,6 +35,7 @@ repository:
 html:
   use_issues_button: true
   use_repository_button: true
+  announcement: "<p>Experimental Still under review</p>"
 
 launch_buttons:
   thebe: true
